# Matrix_Calculator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile
.github/workflows/: ci.yml
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  matrix_8cpp.html  matrix_8cpp.js  matrix_8h.html  matrix_8h.js  matrix_8h_source.html  navtreedata.js  navtreeindex0.js  structMatrix-members.html  structMatrix.html  structMatrix.js
docs/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js
include/: matrix.h
src/: main.cpp  matrix.cpp
tests/: CMakeLists.txt  test_matrix.cpp
